--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </p>
     
     <p class="attribution">
-      Coded by <a href="t.me/legendSabbir">Legend Sabbir.</a>
+      Coded by <a href="https://t.me/legendSabbir">Legend Sabbir.</a>
     </p>
     
   </footer>
